--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.5",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "js-cookie": "^3.0.5",
